# esp8266-data-logger

./: README.md
api/: README.md  main.py  pyproject.toml  requirements.txt
hardware/: README.md
hardware/DS18B20_LOGGER/: DS18B20_LOGGER.ino
